rename upload page to profile page, added current score and uploaded word, added backend endpoint to check currently uploaded word to display on profile (updated stat report and swagger for this), removed profile from swagger since not used, added leaderboard, changed backend query for leaderboard to be by socre desc, added gaining/losing score on front end game, added word check to game, some css changes (color), need a lot of pop up prompts (a component maybe)
