# back-end/documents/swagger.json
@@ -212,6 +212,32 @@
       }
     },
     "/words/{username}": {
+      "get": {
+        "tags": [
+          "words"
+        ],
+        "summary": "Sees the currently uploaded word of a user",
+        "description": "See the word a user uploaded",
+        "operationId": "wordView",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "username of the user to check ",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation"
+          },
+          "500": {
+            "description": "Error connecting to server"
+          }
+        }
+      },
       "delete": {
         "tags": [
           "words"
@@ -258,34 +284,6 @@
           },
           "500": {
             "description": "500: Error could not reach database" 
-          }
-        }
-      }
-    },
-    "/profile/{username}": {
-      "get": {
-        "tags": [
-          "profile"
-        ],
-        "summary": "See the profile information of a user",
-        "description": "Review the profile information of a user",
-        "operationId": "viewProfile",
-        "produces": ["html/text"],
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "username associated to the user being viewed",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation"
-          },
-          "404": {
-            "description": "User does not exist"
           }
         }
       }
